--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Majlis Taklim Al-Hikmah</title>
-  <link rel="stylesheet" href="../public/css/style.css" />
+  <link rel="stylesheet" href="public/css/style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <style>
     /* Fullscreen video background */
@@ -39,7 +39,7 @@
 
   <!-- Background Video -->
   <video autoplay muted loop class="video-bg">
-    <source src="../public/assets/bg-nature1.mp4" type="video/mp4">
+    <source src="public/assets/bg-nature1.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
 
@@ -191,6 +191,6 @@
     </div>
   </div>
 
-  <script src="./js/main.js"></script>
+  <script src="src/js/main.js"></script>
 </body>
 </html>
