--- a/index.html
+++ b/index.html
@@ -38,10 +38,9 @@
 <body class="font-sans text-white overflow-x-hidden">
 
   <!-- Background Video -->
-  <video autoplay muted loop class="video-bg">
-    <source src="public/assets/bg-nature1.mp4" type="video/mp4">
-    Your browser does not support the video tag.
-  </video>
+  <div class="video-bg">
+    <img src="public/assets/bg-nature.jpg" alt="bg-nature">
+  </div>
 
   <!-- Navbar -->
   <nav class="fixed w-full z-50 py-4 px-6">
